--- a/1.html
+++ b/1.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="vi">
 <head>
+  <link rel="icon" type="image/x-icon" href="assets/1.png">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Đình Thông Tây Hội — Timeline</title>
@@ -1225,3 +1226,4 @@ window.addEventListener('load', animateOnScroll);
 
 </body>
 </html>
+
