--- a/classify.html
+++ b/classify.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
+  <link rel="icon" type="image/x-icon" href="assets/1.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Phân loại Di tích Lịch sử Việt Nam | re-MERMORed</title>
@@ -85,3 +86,4 @@
   <script src="classify.js"></script>
 </body>
 </html>
+
